--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^3.12.1"
+    "react-navigation": "^3.12.1",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
