--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-native-reanimated": "^1.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
-    "react-navigation-drawer": "^2.3.3",
-    "react-navigation-tabs": "^2.6.0",
+    "react-navigation-stack": "^1.10.3",
     "react-number-format": "^4.3.1",
     "realm": "^3.4.2",
     "styled-components": "^4.4.1"
