--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-number-format": "^4.3.1",
+    "react-redux": "^7.2.0",
     "realm": "^3.4.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
